--- a/gmao/Passage/liste_interventions_.html
+++ b/gmao/Passage/liste_interventions_.html
@@ -16,26 +16,28 @@
 {% endblock navbar-content %}
 
 {% block content %}
-    <div class="container-fluid mt-3">
+    <div class="container-fluid mt-4">
         <div class="row">
             <div class="col-12">
                 <div class="card">
                     <div class="card-header bg-primary text-white">
-                        <h4 class="mb-0">Liste des interventions du {{ current_date|date:"d/m/Y" }}</h4>
+                        <h2 class="mb-0">Liste des interventions</h2>
                     </div>
                     <div class="card-body">
                         <div class="table-responsive">
                             <table class="table table-striped table-bordered" id="interventionsTable">
                                 <thead>
                                 <tr>
+                                    <th>ID</th>
                                     <th>NDI</th>
                                     <th>Panne</th>
-                                    <th>Début prise en charge</th>
+                                    <th>Prise en charge</th>
                                     <th>Début travail</th>
                                     <th>Fin travail</th>
                                     <th>Statut</th>
                                     <th>Techniciens</th>
                                     <th>Actions</th>
+                                    <!-- Ajoutez ici les en-têtes pour les champs supplémentaires -->
                                     <th>Durée intervention</th>
                                     <th>Kilométrage départ</th>
                                     <th>Kilométrage retour</th>
@@ -46,16 +48,17 @@
                                 <tbody>
                                 {% for intervention in interventions %}
                                     <tr>
+                                        <td>{{ intervention.id }}</td>
                                         <td>{{ intervention.doleance.ndi }}</td>
                                         <td>{{ intervention.doleance.panne_declarer }}</td>
-                                        <td>{{ intervention.top_depart|date:"d/m/Y H:i" }}</td>
-                                        <td>{{ intervention.top_debut|date:"d/m/Y H:i"|default_if_none:"-" }}</td>
-                                        <td>{{ intervention.top_terminer|date:"d/m/Y H:i"|default_if_none:"-" }}</td>
+                                        <td>{{ intervention.top_depart }}</td>
+                                        <td>{{ intervention.top_debut }}</td>
+                                        <td>{{ intervention.top_terminer }}</td>
                                         <td>
                                             {% if intervention.is_done %}
                                                 <span class="badge bg-success">Terminée</span>
                                             {% elif intervention.is_half_done %}
-                                                <span class="badge bg-warning">En cours</span>
+                                                <span class="badge bg-warning">En attente FI {{ intervention.numero_fiche }}</span>
                                             {% else %}
                                                 <span class="badge bg-secondary">Non commencée</span>
                                             {% endif %}
@@ -71,11 +74,12 @@
                                             <a href="{% url 'gmao:detail_intervention' intervention.id %}"
                                                class="btn btn-sm btn-primary">Éditer</a>
                                         </td>
-                                        <td>{{ intervention.duree_intervention|default:"-" }}</td>
-                                        <td>{{ intervention.kilometrage_depart_debut|default:"-" }}</td>
-                                        <td>{{ intervention.kilometrage_home|default:"-" }}</td>
-                                        <td>{{ intervention.resolution|default:"-" }}</td>
-                                        <td>{{ intervention.numero_fiche|default:"-" }}</td>
+                                        <!-- Ajoutez ici les cellules pour les champs supplémentaires -->
+                                        <td>{{ intervention.duree_intervention }}</td>
+                                        <td>{{ intervention.kilometrage_depart_debut }}</td>
+                                        <td>{{ intervention.kilometrage_home }}</td>
+                                        <td>{{ intervention.resolution }}</td>
+                                        <td>{{ intervention.numero_fiche }}</td>
                                     </tr>
                                 {% endfor %}
                                 </tbody>
@@ -94,25 +98,6 @@
     <link rel="stylesheet" type="text/css"
           href="https://cdn.datatables.net/buttons/1.7.0/css/buttons.dataTables.min.css">
     <style>
-        body {
-            padding-top: 60px; /* Ajustez cette valeur en fonction de la hauteur de votre barre de navigation */
-        }
-
-        .container-fluid {
-            padding-top: 0;
-            margin-top: -15px; /* Remonte le contenu */
-        }
-
-        .card {
-            margin-top: 0;
-            border-top: none;
-        }
-
-        .card-header {
-            border-top-left-radius: 0;
-            border-top-right-radius: 0;
-        }
-
         #interventionsTable td {
             white-space: normal;
             word-break: break-word;
@@ -121,15 +106,10 @@
         .badge {
             font-size: 0.8rem;
         }
-
-        .table-responsive {
-            padding-top: 0;
-        }
     </style>
-
     <style>
         .container-fluid {
-            padding-top: 15px;
+            padding-top: 30px; /* Ajoutez cette ligne pour remonter le contenu */
         }
 
         #interventionsTable td {
@@ -171,18 +151,19 @@
                             columns: ':visible'
                         }
                     },
+
                 ],
                 language: {
                     url: '//cdn.datatables.net/plug-ins/1.10.24/i18n/French.json'
                 },
                 columnDefs: [
                     {
-                        targets: [8, 9, 10, 11, 12], // Indices des colonnes à cacher (commençant à 0)
+                        targets: [0, 9, 10, 11, 12, 13], // Indices des colonnes à cacher (commençant à 0)
                         visible: false,
                         searchable: true
                     }
                 ],
-                order: [[2, 'desc']] // Trie par date de prise en charge (3ème colonne) par défaut
+                order: [[3, 'desc']] // Trie par date de prise en charge (4ème colonne) par défaut
             });
         });
     </script>
