--- a/gmao/Passage/passage.html
+++ b/gmao/Passage/passage.html
@@ -1,143 +1,7 @@
-{% extends 'base.html' %}
-{% load static %}
-{% load crispy_forms_tags %}
-
-{% block title %}G M A O{% endblock title %}
-
-{% block nav-btn %}
-    <!-- ... (le contenu reste inchangé) ... -->
-{% endblock nav-btn %}
-
-{% block navbar-content %}
-    <i style="color: hsl(137, 90%, 50%);" class="fa-solid fa-user-alt"></i>
-    &nbsp;&nbsp;&nbsp;{{ user.first_name }}&nbsp;{{ user.last_name }}
-{% endblock navbar-content %}
-
-{% block content %}
-    {% if user.role == 'ADMIN' %}
-        <div class="section-container">
-            <section id="doleances-section" class="full-height-section">
-                <div class="container-fluid">
-                    <div class="row mb-4">
-                        <div class="col-12">
-                            <div class="card">
-                                <div class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
-                                    <h5 class="mb-0">Doléances en cours</h5>
-                                    <button type="button" class="btn btn-light btn-add" data-bs-toggle="modal"
-                                            data-bs-target="#doleanceModal">
-                                        <i class="fas fa-plus"></i>
-                                    </button>
-                                </div>
-                                <div class="card-body">
-                                    <div class="table-responsive">
-                                        <table class="table table-bordered" id="demandeencours" style="width:100%">
-                                            <thead class="fw-bold text-center bg-primary text-light text-uppercase">
-                                            <tr>
-                                                <th>NDI</th>
-                                                <th class="date-column">Date_trans</th>
-                                                <th class="status-column">Statut</th>
-                                                <th>Station</th>
-                                                <th>Éléments</th>
-                                                <th>Panne</th>
-                                                <th class="date-column">Deadline</th>
-                                                <th>Commentaires</th>
-                                                <th>Actions</th>
-                                            </tr>
-                                            </thead>
-                                        </table>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="row mb-4">
-                        <div class="col-12">
-                            <div class="card">
-                                <div class="card-header bg-info text-white">
-                                    <h5 class="mb-0">Interventions</h5>
-                                </div>
-                                <div class="card-body">
-                                    <div class="table-responsive">
-                                        <table class="table table-bordered" id="interventions" style="width:100%">
-                                            <thead>
-                                            <tr>
-                                                <th>NDI</th>
-                                                <th class="date-column">Début prise en charge</th>
-                                                <th class="date-column">Début travail</th>
-                                                <th class="date-column">Fin travail</th>
-                                                <th class="status-column">Statut</th>
-                                                <th>Actions</th>
-                                            </tr>
-                                            </thead>
-                                        </table>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-            <section id="personnel-section" class="full-height-section">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-12">
-                            <div class="card">
-                                <div class="card-header bg-success text-white">
-                                    <h5 class="mb-0">Personnels</h5>
-                                </div>
-                                <div class="card-body">
-                                    <div class="table-responsive">
-                                        <table class="table table-bordered" id="personnel" style="width:100%">
-                                            <thead>
-                                            <tr>
-                                                <th>Nom</th>
-                                                <th>Prénom</th>
-                                                <th class="status-column">Statut</th>
-                                                <th>Actions</th>
-                                            </tr>
-                                            </thead>
-                                        </table>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </div>
-    {% else %}
-        <!-- ... (le contenu pour les non-administrateurs reste inchangé) ... -->
-    {% endif %}
-
-    <!-- Modal pour l'ajout de doléance -->
-    <!-- ... (le contenu du modal reste inchangé) ... -->
-{% endblock content %}
-
-{% block extra_js %}
-    <script src="{% static 'gmao/js/home.js' %}"></script>
-    <script src="{% static 'gmao/js/teams.js' %}"></script>
-    <script>
-        const USER_ROLE = "{{ user_role }}";
-
-        $(document).ready(function () {
-            $('.full-height-section').css('min-height', $(window).height());
-
-            $(window).on('resize', function () {
-                $('.full-height-section').css('min-height', $(window).height());
-            });
-
-            // Smooth scrolling between sections
-            $('a[href^="#"]').on('click', function (event) {
-                var target = $(this.getAttribute('href'));
-                if (target.length) {
-                    event.preventDefault();
-                    $('html, body').stop().animate({
-                        scrollTop: target.offset().top
-                    }, 1000);
-                }
-            });
-        });
-    </script>
-{% endblock extra_js %}
+<!-- ... autres boutons ... -->
+<a href="#doleances-section" class="btn btn-outline-info text-center text-light border-light btn-sm mx-2" id="btn-nav">
+    Doléances
+</a>
+<a href="#personnel-section" class="btn btn-outline-info text-center text-light border-light btn-sm mx-2" id="btn-nav">
+    Personnel
+</a>
