--- a/gmao/Passage/07072024/home.html
+++ b/gmao/Passage/07072024/home.html
@@ -66,105 +66,128 @@
 
 {% block content %}
     {% if user.role == 'ADMIN' %}
-        <div class="row mb-4">
-            <div class="col-12">
-                <div class="card">
-                    <div class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
-                        <h5 class="mb-0">Doléances en cours</h5>
-                        <button type="button" class="btn btn-light btn-add" data-bs-toggle="modal"
-                                data-bs-target="#doleanceModal">
-                            <i class="fas fa-plus"></i>
-                        </button>
-                    </div>
-                    <div class="card-body">
-                        <div class="table-container">
-                            <table class="table table-striped table-bordered" id="demandeencours" style="width:100%">
-                                <!-- ... contenu du tableau des doléances ... -->
-                                <thead class="fw-bold text-center bg-primary text-light text-uppercase">
-                                <tr>
-                                    <td></td>
-                                    <td>NDI</td>
-                                    <td>Date_trans</td>
-                                    <td>Statut</td>
-                                    <td>Station</td>
-                                    <td>Éléments</td>
-                                    <td>Panne</td>
-                                    <td>Deadline</td>
-                                    <td>Commentaires</td>
-                                    <td>Actions</td>
-                                </tr>
-                                </thead>
-                            </table>
+        <div class="section-container">
+            <!-- Section Doléances -->
+            <section id="doleances-section" class="full-height-section">
+                <div class="container-fluid">
+                    <div class="row mb-4">
+                        <div class="col-12">
+                            <div class="card">
+                                <div class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
+                                    <h5 class="mb-0">Doléances en cours</h5>
+                                    <button type="button" class="btn btn-light btn-add" data-bs-toggle="modal"
+                                            data-bs-target="#doleanceModal">
+                                        <i class="fas fa-plus"></i>
+                                    </button>
+                                </div>
+                                <div class="card-body" style="overflow-x: auto;">
+                                    <table class="table table-bordered" id="demandeencours" style="width:100%">
+                                        <thead class="fw-bold text-center bg-primary text-light text-uppercase">
+                                        <tr>
+                                            <th>NDI</th>
+                                            <th>Date_trans</th>
+                                            <th>Statut</th>
+                                            <th>Station</th>
+                                            <th>Éléments</th>
+                                            <th>Panne</th>
+                                            <th>Deadline</th>
+                                            <th>Commentaires</th>
+                                            <th>Actions</th>
+                                        </tr>
+                                        </thead>
+                                    </table>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
+            </section>
 
-        <div class="row mb-4">
-            <div class="col-12">
-                <div class="card">
-                    <div class="card-header bg-info text-white">
-                        <h5 class="mb-0">Interventions</h5>
-                    </div>
-                    <div class="card-body">
-                        <div class="table-container">
-                            <table class="table table-striped table-bordered" id="interventions" style="width:100%">
-                                <thead>
-                                <tr>
-                                    <th>NDI</th>
-                                    <th>Début prise en charge</th>
-                                    <th>Début travail</th>
-                                    <th>Fin travail</th>
-                                    <th>Statut</th>
-                                    <th>Actions</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                {% for intervention in interventions %}
-                                    <tr>
-                                        <td>{{ intervention.doleance.ndi }}</td>
-                                        <td>{{ intervention.top_depart }}</td>
-                                        <td>{{ intervention.top_debut }}</td>
-                                        <td>{{ intervention.top_terminer }}</td>
-                                        <td>
-                                            {% if intervention.is_done %}
-                                                Terminée
-                                            {% elif intervention.is_half_done %}
-                                                En cours
-                                            {% else %}
-                                                Non commencée
+            <!-- Section Équipes -->
+            <section id="equipes-section" class="full-height-section">
+                <div class="container-fluid mt-4">
+                    <h2 class="mb-4">Équipes et leurs doléances</h2>
+                    <div class="row">
+                        {% for equipe in equipes_data %}
+                            <div class="col-md-4 mb-4">
+                                <div class="card h-100" style="width: 90%;">
+                                    <div class="card-header bg-primary text-white">
+                                        <h5 class="card-title mb-0">{{ equipe.nom }}</h5>
+                                    </div>
+                                    <div class="card-body">
+                                        <p class="card-text">{{ equipe.description }}</p>
+                                        <h6 class="mt-3">Techniciens :</h6>
+                                        <ul class="list-group mb-3">
+                                            {% for technicien in equipe.techniciens|slice:":3" %}
+                                                <li class="list-group-item">
+                                                    {{ technicien.prenom }} {{ technicien.nom }}
+                                                    <span class="badge bg-{% if technicien.statut == 'PRS' %}success{% elif technicien.statut == 'ABS' %}danger{% else %}warning{% endif %} float-end">
+                                                        {{ technicien.statut }}
+                                                    </span>
+                                                </li>
+                                            {% endfor %}
+                                            {% if equipe.techniciens|length > 3 %}
+                                                <li class="list-group-item text-muted">
+                                                    Et {{ equipe.techniciens|length|add:"-3" }} autres...
+                                                </li>
                                             {% endif %}
-                                        </td>
-                                        <td>
-                                            <a href="{% url 'gmao:detail_intervention' intervention.id %}"
-                                               class="btn btn-sm btn-primary">Éditer</a>
-                                        </td>
-                                    </tr>
-                                {% endfor %}
-                                </tbody>
-                            </table>
-                        </div>
+                                        </ul>
+                                        <h6 class="mt-3">Doléances actives :</h6>
+                                        <ul class="list-group">
+                                            {% for doleance in equipe.doleances|slice:":5" %}
+                                                <li class="list-group-item">
+                                                    {{ doleance.ndi }} - {{ doleance.panne_declarer|truncatechars:50 }}
+                                                    <span class="badge bg-{% if doleance.statut == 'NEW' %}primary{% elif doleance.statut == 'ATT' %}warning{% elif doleance.statut == 'INT' %}info{% elif doleance.statut == 'ATP' %}danger{% elif doleance.statut == 'ATD' %}secondary{% endif %} float-end">
+                                                        {{ doleance.statut }}
+                                                    </span>
+                                                </li>
+                                            {% empty %}
+                                                <li class="list-group-item">Aucune doléance active</li>
+                                            {% endfor %}
+                                            {% if equipe.doleances|length > 5 %}
+                                                <li class="list-group-item text-muted">
+                                                    Et {{ equipe.doleances|length|add:"-5" }} autres...
+                                                </li>
+                                            {% endif %}
+                                        </ul>
+                                    </div>
+                                    <div class="card-footer">
+                                        <a href="{% url 'gmao_teams:get_equipe_details' equipe.id %}"
+                                           class="btn btn-primary btn-sm">Détails de l'équipe</a>
+                                    </div>
+                                </div>
+                            </div>
+                        {% endfor %}
                     </div>
                 </div>
-            </div>
-        </div>
+            </section>
 
-        <div class="row">
-            <div class="col-12">
-                <div class="card">
-                    <div class="card-header bg-success text-white">
-                        <h5 class="mb-0">Personnels</h5>
-                    </div>
-                    <div class="card-body">
-                        <div class="table-container">
-                            <table class="table table-striped table-bordered" id="personnel" style="width:100%">
-                                <!-- ... contenu du tableau du personnel ... -->
-                            </table>
+            <!-- Section Personnel -->
+            <section id="personnel-section" class="full-height-section">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="card">
+                                <div class="card-header bg-success text-white">
+                                    <h5 class="mb-0">Personnels</h5>
+                                </div>
+                                <div class="card-body" style="overflow-x: auto;">
+                                    <table class="table table-bordered" id="personnel" style="width:100%">
+                                        <thead>
+                                        <tr>
+                                            <th>Nom</th>
+                                            <th>Prénom</th>
+                                            <th>Statut</th>
+                                            <th>Actions</th>
+                                        </tr>
+                                        </thead>
+                                    </table>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
         </div>
 
     {% else %}
