--- a/gmao_teams/static/gmao_teams/import_stock/gmao_teams/gestion_equipes.html
+++ b/gmao_teams/static/gmao_teams/import_stock/gmao_teams/gestion_equipes.html
@@ -67,7 +67,7 @@
 {% endblock %}
 
 {% block extra_css %}
-    <link rel="stylesheet" href="{% static 'css/home.css' %}">
+    <link rel="stylesheet" href="{% static 'gmao/css/home.css' %}">
     <link rel="stylesheet" href="{% static 'gmao_teams/css/equipes.css' %}">
     <style>
         .list-group-item {
